--- a/style.css
+++ b/style.css
@@ -6,12 +6,11 @@
 #ecca00	(236,202,0)
 */
 
-
 html {
   scroll-behavior: smooth;
 }
 
-*{
+* {
   margin: 0px;
   padding: 0px;
   box-sizing: 0px;
@@ -19,32 +18,39 @@ html {
   font-family: "Raleway", sans-serif;
 }
 
-header {
+nav {
   display: flex;
-  align-items: center;
-  position: fixed;
-  z-index: 9999;
-  top: 0;
+  background-color: white;
+  justify-content: space-around;
+  padding: 35px 0;
   width: 100%;
-  background: white;
-  padding: 1.5% 3% 1.5% 3%;
+  position: fixed;
   box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2);
-}
-
-header .logodepan h1 {
-  color: #ec0000;
-  font-size: 50px;
-  margin-right: 100px;
-}
-
-header nav ul li{
-  display: inline-block;
   align-items: center;
-  justify-content: space-between;
-  margin: 20px 40px;
+  z-index: 2;
 }
 
-header nav ul li a{
+nav img {
+  width: 63%;
+}
+
+nav h1 {
+  font-size: 40px;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  width: 50%;
+  justify-content: space-between;
+}
+
+nav ul li a {
+  color: black;
+  text-decoration: none;
+}
+
+header nav ul li a {
   position: relative;
   text-decoration: none;
   color: black;
@@ -53,7 +59,7 @@ header nav ul li a{
   padding: 0 10px;
 }
 
-header nav ul li a:after{
+header nav ul li a:after {
   content: "";
   position: absolute;
   background-color: #ec5300;
@@ -64,10 +70,9 @@ header nav ul li a:after{
   transition: 0.3s;
 }
 
-header nav ul li a:hover:after{
+header nav ul li a:hover:after {
   width: 100%;
 }
-
 
 .home {
   display: flex;
@@ -79,9 +84,9 @@ header nav ul li a:hover:after{
 
 .home .kontenKiri {
   background-image: url("beranda4.png");
+  margin-top: 7.5%;
   width: 1350px;
   height: 650px;
-  margin-top: 7.5%;
   background-repeat: no-repeat;
   object-fit: cover;
 }
@@ -89,6 +94,7 @@ header nav ul li a:hover:after{
 .home .kontenKiri .homeMomo {
   color: white;
 }
+
 .home .kontenKiri h1 {
   font-weight: bold;
   color: white;
@@ -109,11 +115,34 @@ header nav ul li a:hover:after{
   margin-left: 5%;
   margin-top: 6%;
   margin-bottom: 3%;
+  padding-top: 11%;
   color: #ec5300;
   font-size: 40px;
+  text-align: center;
 }
 
-.about p {
+.about .container p{
+  padding-top: 2%;
+  margin-left: 5%;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  font-size: 142%;
+}
+
+.about .container img {
+  margin-left: 10%;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  width: 70%;
+}
+
+.container p:first-child {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+
+/* .about p {
   margin-left: 5%;
   margin-right: 50%;
   text-align: justify;
@@ -123,13 +152,14 @@ header nav ul li a:hover:after{
 .about img {
   width: 550px;
   margin-right: 5%;
+  margin-top: 11%;
   float: right;
   margin-left: 10px;
   border-radius: 5%;
-}
+} */
 
 .order h1 {
-  margin-top: 20%;
+  margin-top: 22%;
   text-align: center;
   color: white;
   background-color: darkred;
@@ -150,30 +180,32 @@ header nav ul li a:hover:after{
   margin: 2% 2%;
 }
 
-.menu{
-  margin-bottom: 150px;
+.menu {
+  margin-bottom: 10px;
 }
 
-.menu h1{
+.menu h1 {
   font-size: 40px;
   text-align: center;
   color: #ec5300;
-  margin: 100px 0px 50px 0px;
+  margin-top: 3%;
+  margin-bottom: 6%;
+  padding-top: 10%;
 }
 
-.menu .product{
+.menu .product {
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
   padding: 30px 20px;
   grid-column-gap: 20px;
   grid-row-gap: 30px;
 }
 
-.menu .product .item img:hover{
+.menu .product .item img:hover {
   opacity: 0.7;
 }
 
-.menu .product .item img{
+.menu .product .item img {
   width: 100%;
   height: 300px;
   object-fit: cover;
@@ -181,12 +213,12 @@ header nav ul li a:hover:after{
   transition: all 0.3s ease;
 }
 
-.menu .product .item h4{
+.menu .product .item h4 {
   font-size: 20px;
   margin: 5px 0;
 }
 
-.menu .product .item p{
+.menu .product .item p {
   font-size: 17px;
   margin: 5px 0;
   text-align: right;
@@ -194,16 +226,19 @@ header nav ul li a:hover:after{
   font-weight: bolder;
 }
 
-.menu .product div{
+.menu .product div {
   border: 1px solid lightgrey;
   padding: 8px;
 }
 
 .gallery h1 {
+  margin-top: 8%;
+  padding-top: 10%;
   color: #ec5300;
   font-size: 40px;
   text-align: center;
-  margin-bottom: 4%;
+  margin-bottom: 7%;
+  text-transform: uppercase;
 }
 
 .gallery .isiGallery {
@@ -232,28 +267,214 @@ header nav ul li a:hover:after{
 .foot {
   background-color: darkred;
   color: white;
-  padding-left: 3%;
-  display: flex;
+  padding-left: 0%;
   padding-top: 7%;
   padding-bottom: 7%;
-  margin-top: 10%;
+  margin-top: 16%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
 }
 .foot p {
   margin-bottom: 6%;
 }
 
+.foot .part1 {
+  padding: 20%;
+  text-align: left;
+}
+
 .foot .part2 {
-  margin-left: 12%;
+  padding: 20%;
+  text-align: left;
 }
 
 .foot .part3 {
-  margin-left: 12%;
+  padding: 20%;
+  text-align: center;
+}
+
+.foot .part3 img {
+  justify-content: space-between;
 }
 
 .foot .part4 {
-  margin-left: 12%;
+  padding: 20%;
+  text-align: left;
 }
 
 .foot img {
   width: 35px;
 }
+
+.burger span {
+  color: black;
+  display: none;
+}
+
+@media screen and (max-width: 1024px) {
+  .burger span {
+    display: block;
+  }
+
+  nav {
+    justify-content: space-around;
+    padding: 40px;
+  }
+
+  nav ul {
+    display: block;
+    position: absolute;
+    background-color: #ec5300;
+    width: 200px;
+    text-align: center;
+    top: 0;
+    right: -400px;
+    height: 100vh;
+  }
+
+  nav ul li {
+    margin: 20px 0px;
+  }
+
+  .home .kontenKiri {
+    background-image: url("beranda4.png");
+    margin-top: 12%;
+    width: 1024px;
+    height: 650px;
+    object-fit: cover;
+  }
+
+  .home .kontenKiri h1 {
+    font-weight: bold;
+    color: white;
+    font-size: 75px;
+    text-align: center;
+    margin-top: 10%;
+  }
+  
+  .home .kontenKiri p {
+    font-family: "Montserrat", sans-serif;
+    font-size: 30px;
+    font-weight: bolder;
+    color: lightgray;
+    text-align: center;
+
+  }
+
+  .about .container img {
+    margin-left: 10%;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+
+  .about .container p{
+    padding-top: 2%;
+    margin-left: 5%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    font-size: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .home .kontenKiri {
+    background-image: url("beranda4.png");
+    margin-top: 17%;
+    width: 760px;
+    height: 650px;
+    object-fit: cover;
+  }
+
+  .home .kontenKiri h1 {
+    font-weight: bold;
+    color: white;
+    font-size: 65px;
+    text-align: center;
+    margin-top: 15%;
+  }
+  
+  .home .kontenKiri p {
+    font-family: "Montserrat", sans-serif;
+    font-size: 20px;
+    font-weight: bolder;
+    color: lightgray;
+    text-align: center;
+  }
+  
+
+  .foot {
+    background-color: darkred;
+    color: white;
+    padding-left: 0%;
+    padding-top: 7%;
+    padding-bottom: 7%;
+    margin-top: 16%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 2fr;
+  }
+
+  .foot .part3 {
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 564px) {
+
+
+  .home .kontenKiri {
+    background-image: url("beranda4.png");
+    margin-top: 26%;
+    width: 564px;
+    height: 650px;
+    object-fit: cover;
+  }
+
+  .home .kontenKiri h1 {
+    font-weight: bold;
+    color: white;
+    font-size: 40px;
+    text-align: center;
+    margin-top: 27%;
+  }
+  
+  .home .kontenKiri p {
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    font-weight: bolder;
+    color: lightgray;
+    text-align: center;
+  }
+
+
+
+  .foot {
+    background-color: darkred;
+    color: white;
+    padding-left: 0%;
+    padding-top: 7%;
+    padding-bottom: 7%;
+    margin-top: 16%;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 4fr;
+  }
+    .foot .part1 {
+      text-align: center;
+    }
+
+    .foot .part2 {
+      text-align: center;
+    }
+
+     .foot .part3 {
+       text-align: center;
+    }
+
+    .foot .part4 {
+      text-align: center;
+    }
+
+}
+
