--- a/style.css
+++ b/style.css
@@ -111,6 +111,10 @@ header nav ul li a:hover:after {
   text-align: center;
 }
 
+.about{
+  margin-bottom: 10%;
+}
+
 .about h1 {
   margin-left: 5%;
   margin-top: 6%;
@@ -133,8 +137,14 @@ header nav ul li a:hover:after {
 .about .container img {
   margin-left: 10%;
   grid-column: 2 / 3;
-  grid-row: 1 / 2;
-  width: 75%;
+  grid-row: 2 / 3;  
+  width: 500px;
+  height: 350px;
+  border-radius: 5%;
+}
+
+.about strong{
+  font-size: 30px;
 }
 
 .container p:first-child {
@@ -142,48 +152,37 @@ header nav ul li a:hover:after {
   grid-row: 1 / 2;
 }
 
-
-/* .about p {
-  margin-left: 5%;
-  margin-right: 50%;
-  text-align: justify;
-  font-size: 142%;
-}
-
-.about img {
-  width: 550px;
-  margin-right: 5%;
-  margin-top: 11%;
-  float: right;
-  margin-left: 10px;
-  border-radius: 5%;
-} */
-
-.about img{
-  border-radius: 5%;
-}
-    
 .order h1 {
-  margin-top: 22%;
   text-align: center;
+  margin: 7%;
   color: white;
-  background-color: darkred;
-  padding-bottom: 20%;
-  padding-top: 14%;
   font-size: 40px;
   font-family: "Montserrat", sans-serif;
 }
 
-.order img {
-  margin: 6% 4% 0% 6%;
-  width: 12%;
-  align-items: center;
+.order{
+  background-color: darkred;
+  padding: 9% 11%;
+  font-weight: bolder;
 }
 
-.order .deskripsi .judul {
-  font-size: 22px;
-  display: inline;
-  margin: 2% 2%;
+.order > div{
+  display: flex;
+  justify-content: space-between;
+  text-align: center  ;
+}
+
+.order img {
+  width: 150px;
+  margin: 6% 8% 0% 8%;
+}
+
+
+.order p {
+  font-size: 30px;
+  margin-top: 8%;
+  margin-left: 10%;
+  color: white;
 }
 
 .menu {
@@ -237,6 +236,7 @@ header nav ul li a:hover:after {
 .menu .product div {
   border: 1px solid lightgrey;
   padding: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .gallery h1 {
@@ -271,6 +271,37 @@ header nav ul li a:hover:after {
 
 .gallery img:hover {
   opacity: 0.7;
+}
+
+.map{
+  text-align: center;
+  font-size: 20px;
+  margin-top: 10%;
+  color: #ec5300;
+}
+
+.map iframe{
+  width: 100%;
+}
+
+.map h1{
+  margin-bottom: 2%;
+}
+
+.slideshow {
+  position: relative;
+  height: 500px;
+  overflow: hidden;
+}
+
+.slideshow img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 500px;
+  height: 500px;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
 }
 
 .foot {
@@ -347,7 +378,7 @@ header nav ul li a:hover:after {
   }
 
   .home .kontenKiri {
-    background-image: url("beranda4.png");
+    background-image: url("assets/beranda4.png");
     margin-top: 12%;
     width: 1024px;
     height: 650px;
@@ -388,7 +419,7 @@ header nav ul li a:hover:after {
 
 @media screen and (max-width: 768px) {
   .home .kontenKiri {
-    background-image: url("beranda4.png");
+    background-image: url("assets/beranda4.png");
     margin-top: 17%;
     width: 760px;
     height: 650px;
@@ -431,7 +462,7 @@ header nav ul li a:hover:after {
 
 @media screen and (max-width: 564px) {
   .home .kontenKiri {
-    background-image: url("beranda4.png");
+    background-image: url("assets/beranda4.png");
     margin-top: 26%;
     width: 564px;
     height: 650px;
