--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ header nav ul li a {
 header nav ul li a:after {
   content: "";
   position: absolute;
-  background-color: #ec5300;
+  background-color: #FF4800;
   height: 3px;
   width: 0;
   left: 0;
@@ -112,49 +112,44 @@ header nav ul li a:hover:after {
 }
 
 .about{
-  margin-bottom: 10%;
+  margin-bottom: 12%;
 }
 
 .about h1 {
   margin-left: 5%;
-  margin-top: 6%;
+  margin-top: 2%;
   margin-bottom: 3%;
   padding-top: 11%;
-  color: #ec5300;
+  color: #FF4800;
   font-size: 40px;
   text-align: center;
   font-family: "Montserrat", sans-serif;
 }
 
-.about .container p{
+.about .container .isikonten {
   padding-top: 2%;
-  margin-left: 5%;
-  display: grid;
-  grid-template-columns: 50% 50%;
   font-size: 142%;
 }
 
-.about .container img {
-  margin-left: 10%;
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;  
-  width: 500px;
-  height: 350px;
+.about .container {
+  display: flex;
+  padding-right: 5%;
+}
+
+.about .gambar img {
   border-radius: 5%;
+  margin-right: 50px;
+  margin-left: 50px;
 }
 
 .about strong{
   font-size: 30px;
 }
 
-.container p:first-child {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-}
 
 .order h1 {
   text-align: center;
-  margin: 7%;
+  margin-bottom: 8%;
   color: white;
   font-size: 40px;
   font-family: "Montserrat", sans-serif;
@@ -180,9 +175,10 @@ header nav ul li a:hover:after {
 
 .order p {
   font-size: 30px;
-  margin-top: 8%;
+  margin-top: 20%;
   margin-left: 10%;
   color: white;
+  margin-bottom: 5%;
 }
 
 .menu {
@@ -192,7 +188,7 @@ header nav ul li a:hover:after {
 .menu h1 {
   font-size: 40px;
   text-align: center;
-  color: #ec5300;
+  color: #FF4800;
   margin-top: 3%;
   margin-bottom: 6%;
   padding-top: 10%;
@@ -241,8 +237,8 @@ header nav ul li a:hover:after {
 
 .gallery h1 {
   margin-top: 8%;
-  padding-top: 10%;
-  color: #ec5300;
+  padding-top: 7%;
+  color: #FF4800;
   font-size: 40px;
   text-align: center;
   margin-bottom: 7%;
@@ -277,7 +273,6 @@ header nav ul li a:hover:after {
   text-align: center;
   font-size: 20px;
   margin-top: 10%;
-  color: #ec5300;
 }
 
 .map iframe{
@@ -286,6 +281,19 @@ header nav ul li a:hover:after {
 
 .map h1{
   margin-bottom: 2%;
+  color: #FF4800;
+}
+
+.map p {
+  text-align: center;
+}
+
+#cabang1 {
+  margin-top: 5%;
+}
+
+#cabang2 {
+  margin-top: 12%;
 }
 
 .slideshow {
@@ -365,7 +373,7 @@ header nav ul li a:hover:after {
   nav ul {
     display: block;
     position: absolute;
-    background-color: #ec5300;
+    background-color: #FF4800;
     width: 200px;
     text-align: center;
     top: 0;
