--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ header nav ul li a {
 header nav ul li a:after {
   content: "";
   position: absolute;
-  background-color: #FF4800;
+  background-color: #ff4800;
   height: 3px;
   width: 0;
   left: 0;
@@ -111,7 +111,7 @@ header nav ul li a:hover:after {
   text-align: center;
 }
 
-.about{
+.about {
   margin-bottom: 12%;
 }
 
@@ -120,7 +120,7 @@ header nav ul li a:hover:after {
   margin-top: 2%;
   margin-bottom: 3%;
   padding-top: 11%;
-  color: #FF4800;
+  color: #ff4800;
   font-size: 40px;
   text-align: center;
   font-family: "Montserrat", sans-serif;
@@ -142,10 +142,9 @@ header nav ul li a:hover:after {
   margin-left: 50px;
 }
 
-.about strong{
+.about strong {
   font-size: 30px;
 }
-
 
 .order h1 {
   text-align: center;
@@ -155,23 +154,22 @@ header nav ul li a:hover:after {
   font-family: "Montserrat", sans-serif;
 }
 
-.order{
+.order {
   background-color: darkred;
   padding: 9% 11%;
   font-weight: bolder;
 }
 
-.order > div{
+.order > div {
   display: flex;
   justify-content: space-between;
-  text-align: center  ;
+  text-align: center;
 }
 
 .order img {
   width: 150px;
   margin: 6% 8% 0% 8%;
 }
-
 
 .order p {
   font-size: 30px;
@@ -188,7 +186,7 @@ header nav ul li a:hover:after {
 .menu h1 {
   font-size: 40px;
   text-align: center;
-  color: #FF4800;
+  color: #ff4800;
   margin-top: 3%;
   margin-bottom: 6%;
   padding-top: 10%;
@@ -238,7 +236,7 @@ header nav ul li a:hover:after {
 .gallery h1 {
   margin-top: 8%;
   padding-top: 7%;
-  color: #FF4800;
+  color: #ff4800;
   font-size: 40px;
   text-align: center;
   margin-bottom: 7%;
@@ -269,19 +267,19 @@ header nav ul li a:hover:after {
   opacity: 0.7;
 }
 
-.map{
+.map {
   text-align: center;
   font-size: 20px;
   margin-top: 10%;
 }
 
-.map iframe{
+.map iframe {
   width: 100%;
 }
 
-.map h1{
+.map h1 {
   margin-bottom: 2%;
-  color: #FF4800;
+  color: #ff4800;
 }
 
 .map p {
@@ -360,7 +358,7 @@ header nav ul li a:hover:after {
   display: none;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1280px) {
   .burger span {
     display: block;
   }
@@ -373,7 +371,7 @@ header nav ul li a:hover:after {
   nav ul {
     display: block;
     position: absolute;
-    background-color: #FF4800;
+    background-color: #ff4800;
     width: 200px;
     text-align: center;
     top: 0;
@@ -400,14 +398,13 @@ header nav ul li a:hover:after {
     text-align: center;
     margin-top: 10%;
   }
-  
+
   .home .kontenKiri p {
     font-family: "Montserrat", sans-serif;
     font-size: 30px;
     font-weight: bolder;
     color: lightgray;
     text-align: center;
-
   }
 
   .about .container img {
@@ -416,7 +413,7 @@ header nav ul li a:hover:after {
     grid-row: 1 / 2;
   }
 
-  .about .container p{
+  .about .container p {
     padding-top: 2%;
     margin-left: 5%;
     display: grid;
@@ -441,7 +438,7 @@ header nav ul li a:hover:after {
     text-align: center;
     margin-top: 15%;
   }
-  
+
   .home .kontenKiri p {
     font-family: "Montserrat", sans-serif;
     font-size: 20px;
@@ -449,7 +446,7 @@ header nav ul li a:hover:after {
     color: lightgray;
     text-align: center;
   }
-  
+
 
   .foot {
     background-color: darkred;
@@ -484,7 +481,7 @@ header nav ul li a:hover:after {
     text-align: center;
     margin-top: 27%;
   }
-  
+
   .home .kontenKiri p {
     font-family: "Montserrat", sans-serif;
     font-size: 14px;
@@ -504,21 +501,19 @@ header nav ul li a:hover:after {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: 4fr;
   }
-    .foot .part1 {
-      text-align: center;
-    }
+  .foot .part1 {
+    text-align: center;
+  }
 
-    .foot .part2 {
-      text-align: center;
-    }
+  .foot .part2 {
+    text-align: center;
+  }
 
-     .foot .part3 {
-       text-align: center;
-    }
+  .foot .part3 {
+    text-align: center;
+  }
 
-    .foot .part4 {
-      text-align: center;
-    }
-
+  .foot .part4 {
+    text-align: center;
+  }
 }
-
