--- a/style.css
+++ b/style.css
@@ -6,10 +6,6 @@
 #ecca00	(236,202,0)
 */
 
-html {
-  scroll-behavior: smooth;
-}
-
 * {
   margin: 0px;
   padding: 0px;
@@ -18,14 +14,33 @@ html {
   font-family: "Raleway", sans-serif;
 }
 
+body {
+  scroll-behavior: smooth;
+  overflow-y: scroll;
+  transition: all 0.3s;
+}
+body::-webkit-scrollbar {
+  width: 0.5em;
+}
+body::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+}
+body:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
 nav {
   display: flex;
-  background-color: white;
+  background-color: transparent;
+  transition: all 0.5s ease-in-out;
   justify-content: space-around;
-  padding: 35px 0;
+  padding: 25px 0;
   width: 100%;
   position: fixed;
-  box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2);
   align-items: center;
   z-index: 2;
 }
@@ -45,22 +60,25 @@ nav ul {
   justify-content: space-between;
 }
 
-nav ul li a {
-  color: black;
-  text-decoration: none;
-}
-
 header nav ul li a {
+  color: black;
   position: relative;
   text-decoration: none;
-  color: black;
+  font-weight: bold;
   font-size: 18px;
   letter-spacing: 0.5px;
   padding: 0 10px;
 }
 
+nav.navbar-scrolled {
+  background-color: #ffffff;
+  color: black;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
 header nav ul li a:after {
   content: "";
+  font-weight: bold;
   position: absolute;
   background-color: #ff4800;
   height: 3px;
@@ -74,52 +92,50 @@ header nav ul li a:hover:after {
   width: 100%;
 }
 
-.home {
+.landing {
+  background-image: url("assets/landing.jpg");
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+}
+
+.landing::before {
+  content: "";
+  background-image: url("assets/landing.jpg");
+  background-size: cover;
+  background-position: center center;
+  height: 100%;
   width: 100%;
-  padding-left: 0;
+  filter: blur(5px);
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.home .kontenKiri {
-  background-image: url("assets/beranda4.png");
-  margin-top: 7.5%;
-  width: 1350px;
-  height: 650px;
-  background-repeat: no-repeat;
-  object-fit: cover;
-}
-
-.home .kontenKiri .homeMomo {
+.landing h1 {
   color: white;
+  z-index: 1;
+  font-size: 90px;
 }
 
-.home .kontenKiri h1 {
-  font-weight: bold;
+.landing h3 {
   color: white;
-  font-size: 100px;
-  text-align: center;
-  padding-top: 15%;
-}
-
-.home .kontenKiri p {
-  font-family: "Montserrat", sans-serif;
-  font-size: 35px;
-  font-weight: bolder;
-  color: lightgray;
-  text-align: center;
+  z-index: 1;
+  margin-top: 5px;
+  font-size: 40px;
 }
 
 .about {
   margin-bottom: 12%;
+  margin-top: 200px;
 }
 
 .about h1 {
-  margin-left: 5%;
-  margin-top: 2%;
   margin-bottom: 3%;
-  padding-top: 11%;
   color: #ff4800;
   font-size: 40px;
   text-align: center;
@@ -127,23 +143,27 @@ header nav ul li a:hover:after {
 }
 
 .about .container .isikonten {
-  padding-top: 2%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
   font-size: 142%;
 }
 
 .about .container {
   display: flex;
-  padding-right: 5%;
 }
 
 .about .gambar img {
+  background-size: cover;
   border-radius: 5%;
   margin-right: 50px;
   margin-left: 50px;
+  box-shadow: 15px 15px 30px #bebebe, -15px -15px 30px #ffffff;
 }
 
 .about strong {
   font-size: 30px;
+  margin-bottom: 30px;
 }
 
 .order h1 {
@@ -160,9 +180,15 @@ header nav ul li a:hover:after {
   font-weight: bolder;
 }
 
-.order > div {
+.order-container {
   display: flex;
   justify-content: space-between;
+}
+
+.order-container div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
@@ -180,6 +206,7 @@ header nav ul li a:hover:after {
 }
 
 .menu {
+  margin-top: 200px;
   margin-bottom: 10px;
 }
 
@@ -187,39 +214,38 @@ header nav ul li a:hover:after {
   font-size: 40px;
   text-align: center;
   color: #ff4800;
-  margin-top: 3%;
-  margin-bottom: 6%;
-  padding-top: 10%;
+  margin-bottom: 50px;
   font-family: "Montserrat", sans-serif;
 }
 
-.menu .product {
-  display: grid;
-  /* grid-template-columns: repeat(4, 1fr); */
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  padding: 30px 20px;
-  grid-column-gap: 20px;
-  grid-row-gap: 30px;
+.menu .menu-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
-.menu .product .item img:hover {
+.menu .menu-container .item img:hover {
   opacity: 0.7;
 }
 
-.menu .product .item img {
+.menu .menu-container .item {
+  width: 300px;
+}
+
+.menu .menu-container .item img {
   width: 100%;
-  height: 300px;
   object-fit: cover;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 
-.menu .product .item h4 {
+.menu .menu-container .item h4 {
   font-size: 20px;
   margin: 5px 0;
 }
 
-.menu .product .item p {
+.menu .menu-container .item p {
   font-size: 17px;
   margin: 5px 0;
   text-align: right;
@@ -227,10 +253,10 @@ header nav ul li a:hover:after {
   font-weight: bolder;
 }
 
-.menu .product div {
+.menu .menu-container div {
   border: 1px solid lightgrey;
   padding: 8px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .gallery h1 {
@@ -446,7 +472,6 @@ header nav ul li a:hover:after {
     color: lightgray;
     text-align: center;
   }
-
 
   .foot {
     background-color: darkred;
