--- a/momo.css
+++ b/momo.css
@@ -80,6 +80,28 @@ nav.navbar-scrolled a {
   color: black;
 }
 
+nav.navbar-scrolled #nav-login {
+  background-color:  orange;
+}
+
+#nav-login{
+  background-color: white;
+  font-weight: bold;
+  border-color: transparent;
+  text-align: center;
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: black;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 0.5s;
+  letter-spacing: 4px;
+  border-radius: 10px;
+}
+
 header nav ul li a:after {
   content: "";
   font-weight: bold;
@@ -134,8 +156,8 @@ header nav ul li a:hover:after {
 }
 
 .about {
-  margin-bottom: 12%;
   margin-top: 200px;
+  margin-bottom: 200px;
 }
 
 .about h1 {
@@ -201,6 +223,10 @@ header nav ul li a:hover:after {
   margin: 6% 8% 0% 8%;
 }
 
+.order img:hover {
+   transform: scale(1.2);
+}
+
 .order p {
   font-size: 30px;
   margin-top: 20%;
@@ -230,7 +256,8 @@ header nav ul li a:hover:after {
 }
 
 .menu .menu-container .item img:hover {
-  opacity: 0.7;
+  transform: scale(1.1);
+  filter: brightness(110%);
 }
 
 .menu .menu-container .item {
@@ -261,6 +288,10 @@ header nav ul li a:hover:after {
   border: 1px solid lightgrey;
   padding: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.gallery{
+  overflow: hidden;
 }
 
 .gallery h1 {
@@ -294,16 +325,19 @@ header nav ul li a:hover:after {
 }
 
 .gallery img:hover {
-  opacity: 0.7;
+  transform: scale(1.05);
+  filter: brightness(120%);
 }
 
 .map{
   margin-top: 200px;
+  background-color: darkred;
+  padding: 100px;
 }
 
 .map h1{
   text-align: center;
-  color: #ff4800;
+  color: white;
   margin-bottom: 50px;
 }
 
@@ -311,6 +345,7 @@ header nav ul li a:hover:after {
   text-align: center;
   margin: 20px 0;
   font-weight: bold;
+  color: white;
   font-size: 30px;
 }
 
@@ -325,33 +360,17 @@ iframe {
   flex-basis: 50%;
 }
 
-.slideshow {
-  position: relative;
-  height: 500px;
-  overflow: hidden;
-}
-
-.slideshow img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 500px;
-  height: 500px;
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
-}
-
 .foot {
   background-color: darkred;
   color: white;
   padding-left: 0%;
   padding-top: 7%;
   padding-bottom: 7%;
-  margin-top: 16%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
 }
+
 .foot p {
   margin-bottom: 6%;
 }
