--- a/momo.css
+++ b/momo.css
@@ -85,11 +85,12 @@ nav.navbar-scrolled #nav-login {
 }
 
 nav.navbar-scrolled #nav-login:hover {
-  background-color:  yellow;
+  filter: brightness(90%);
+  transform: scale(1.1);
 }
 
 #nav-login{
-  background-color: white;
+  background-color: orange;
   font-weight: bold;
   border-color: transparent;
   text-align: center;
@@ -107,7 +108,8 @@ nav.navbar-scrolled #nav-login:hover {
 }
 
 #nav-login:hover{
-  background-color: yellow;
+  filter: brightness(90%);
+  transform: scale(1.1);
 }
 
 header nav ul li a:after {
@@ -152,6 +154,7 @@ header nav ul li a:hover:after {
 
 .landing h1 {
   color: white;
+  cursor: pointer;
   z-index: 1;
   font-size: 90px;
   transition: 0.2s ease-in;
@@ -162,10 +165,15 @@ header nav ul li a:hover:after {
 }
 
 .landing h3 {
+  transition: 0.2s ease-in;
   color: white;
   z-index: 1;
   margin-top: 5px;
   font-size: 40px;
+}
+
+.landing h3:hover {
+  font-size: 50px;
 }
 
 .about {
