--- a/momo.css
+++ b/momo.css
@@ -37,6 +37,74 @@ body#home {
   width: calc(100% - 200px);
 }
 
+.nav-container{
+  display: flex;
+}
+
+nav{
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  height: 70px;
+}
+
+nav img{
+  width: 150px;
+}
+
+.btn-contain{
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin-right: 20px;
+}
+
+.btn-contain ul{
+  list-style-type: none;
+  transition: 0.5s;
+}
+
+.btn-contain ul li a{
+  text-decoration: none;
+  background-color: orange;
+  padding: 10px 20px;
+  color: black;
+  border-radius: 10px;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.btn-contain ul:hover{
+  filter: brightness(90%);
+  transform: scale(1.1);
+}
+
+#nav-logout{
+  border: none;
+  text-decoration: none;
+  color: white;
+  background-color: red;
+  padding: 10px 20px;
+  border-radius: 10px;
+  transition: 0.5s;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+#nav-logout:hover{
+  filter: brightness(90%);
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+#nav-logout a{
+  text-decoration: none;
+  color: white;
+}
+
 .sidebar {
   background-color: #ff4800;
   position: fixed;
@@ -81,6 +149,10 @@ body#home {
   font-weight: bolder;
   color: white;
   transform: translatex(10px);
+}
+
+.sidebar i{
+  margin-right: 16px;
 }
 
 .item {
@@ -234,6 +306,7 @@ body#home {
 
 .table-user h1 {
   color: #ff4800;
+  text-align: center;
 }
 
 .table-user table {
