--- a/style.css
+++ b/style.css
@@ -114,14 +114,14 @@ nav.navbar-scrolled #nav-login:hover {
 
 #nav-logout {
   cursor: pointer;
-  background-color: yellow;
+  background-color: red;
   font-weight: bold;
   border-color: transparent;
   text-align: center;
   position: relative;
   display: inline-block;
   padding: 10px 20px;
-  color: black;
+  color: white;
   font-size: 14px;
   text-decoration: none;
   text-transform: uppercase;
